# Q-4

./: .clang-format  CMakeLists.txt  documentstab.cpp  documentstab.h  mainwindow.cpp  mainwindow.h  webview.cpp  webview.h  webview.ui
include/: algorithm.h  document.h  documentfactory.h  fileobserver.h  filewatcher.h  parser.h
include/document/: htmldocument.h  manpagedocument.h  markdowndocument.h  pdfdocument.h  textdocument.h
include/factory/: htmldocumentfactory.h  manpagedocumentfactory.h  markdowndocumentfactory.h  pdfdocumentfactory.h  textdocumentfactory.h
include/filewatcher/: bsdfilewatcher.h  linuxfilewatcher.h  windowsfilewatcher.h
include/parser/: htmlparser.h  manpageparser.h  markdownparser.h  pdfparser.h  textparser.h
src/: bsdfilewatcher.cpp  document.cpp  documentfactory.cpp  filewatcher.cpp  htmldocument.cpp  linuxfilewatcher.cpp  manpagedocument.cpp  manpageparser.cpp  markdowndocument.cpp  markdownparser.cpp  pdfdocument.cpp  pdfparser.cpp  textdocument.cpp  textparser.cpp  windowsfilewatcher.cpp
